fixing overflow issue

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -12,6 +12,8 @@ html, body {
   margin: 0;
   padding: 0;
   margin-bottom: 0;
+  overflow: auto;
+  overflow-x: hidden;
 }
 
 .cursor {
